fix Cart spacing

--- a/app/src/css/components/Cart.scss
+++ b/app/src/css/components/Cart.scss
@@ -1,3 +1,7 @@
+.Cart {
+  margin-top: 30px;
+}
+
 .CartDrawer__wrapper {
   top: 0;
   right: 0;
